# Magnetometer-testbed

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  i2c_bus_scan.uf2  i2ctest.c
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default_padded_checksummed.S  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
(+116 files in other folders)
